add update and delete

--- a/main_app/templates/cats/show.html
+++ b/main_app/templates/cats/show.html
@@ -1,4 +1,15 @@
-<h2> Name: {{ cat.name }}</h2>
-    <p> Breed: {{ cat.breed }}</p>
-    <p> Description: {{ cat.description }}</p>
-    <p> Age: {{ cat.age }}</p>
+{% extends 'base.html'%}
+{% block content%}
+<div class="card-body">
+    <h2 class="card-title">Name: {{ cat.name }}</h2>
+    <p>Breed: {{ cat.breed }}</p>
+    <p>Description: {{ cat.description }}</p>
+    {% if cat.age > 0 %}
+        <p>Age: {{ cat.age }}</p>
+    {% else %}
+        <p>Age: Kitten</p>
+    {% endif %}
+    <a class="btn btn-primary" href="{% url 'cats_update' cat.id %}">Update Details</a> |
+    <a class="btn btn-danger" href="{% url 'cats_delete' cat.id %}">DELETE Cat</a>
+</div>
+{% endblock %}
