--- a/main_app/templates/cattoys/show.html
+++ b/main_app/templates/cattoys/show.html
@@ -4,7 +4,13 @@
         <h1>Cat Toy Details </h1>
         <h2 class="card-title">Name: {{ cattoy.name }}</h2>
         <p>Color: {{ cattoy.color }}</p>
-​
+        <p>Owner:</p>
+        {% for cat in cattoy.cat_set.all %}
+            <p>{{ cat.name }}</p>
+        {% empty %}
+            <p>No cat has this toy...</p>
+        {% endfor %}
+        
         <a class="btn btn-primary" href="{% url 'cattoys_update' cattoy.id %}">Edit</a> |
         <a class="btn btn-danger" href="{% url 'cattoys_delete' cattoy.id %}">Delete</a>
     </div>
