[signup] add url, view function, and html

--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -9,9 +9,19 @@
     <title>CatCollector</title>
 </head>
 <body>
-    <a href="/cats">
+    <header>
+    {% if user.is_authenticated %}
+        <span><a href="{% url 'profile' user.username %}">Hello, {{ user.username }}</a></span> |
+        <span><a href="{% url 'logout' %}">Logout</a></span>
+    {% else %}
+        <span><a href="{% url 'login' %}">Login</a></span> |
+        <span><a href="{% url 'signup' %}">Signup</a></span>
+    {% endif %}
+
+        <a href="/cats">
             <h1>CatCollector</h1>
-    </a>
+        </a>
+    </header>
     
     {% block content %}
     {% endblock %}
