--- a/main_app/templates/cats/show.html
+++ b/main_app/templates/cats/show.html
@@ -15,8 +15,10 @@
     {% empty %}
         <p>Cat has no toys... :(</p>
     {% endfor %}
-
-    <a class="btn btn-primary" href="{% url 'cats_update' cat.id %}">Update Details</a> |
-    <a class="btn btn-danger" href="{% url 'cats_delete' cat.id %}">DELETE Cat</a>
+    
+    {% if user.is_authenticated %}
+        <a class="btn btn-primary" href="{% url 'cats_update' cat.id %}">Update Details</a> |
+        <a class="btn btn-danger" href="{% url 'cats_delete' cat.id %}">DELETE Cat</a>
+    {% endif %}
 </div>
 {% endblock %}
